feat: finalize media account filing workflow